slight change to whom I send a notificaiton

--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1800,14 +1800,15 @@ power_notification_sonnette_video:
   use_blueprint:
     path: jlo/power_notification_creator.yaml
     input:
-      target: send_to_persons_not_in_zones
-      zones:
-      - zone.home
-      default_title: "\U0001F3A5 Sonnette "
+      target: send_to_all
+      zones: []
+      default_title: "\U0001F514 Sonnette "
       notification_data_advanced:
         entity_id: camera.sonnette_fluide
         url: /lovelace/cameras
       default_message: La sonnette a détectée quelque chose
+      persons:
+      - person.jenova70
   alias: Power notification - Sonnette vidéo
   description: ''
 power_notification_lancement_lave_vaisselle_prevu:
